--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,13 @@
-baseurl = "https://USERNAME.github.io/"
-title = "FIRSTNAME FAMILYNAME"
-copyright = "&copy; 2018 FIRSTNAME FAMILYNAME (license [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/))"
+baseurl = "https://LucieMarin.github.io/"
+title = "Lucie Marin"
+copyright = "&copy; 2018 Lucie Marin (license [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/))"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
-publishDir = "../USERNAME.github.io"
+publishDir = "../LucieMarin.github.io"
 relativeurls = true
 
 # Enable comments by entering your Disqus shortname
@@ -207,17 +207,17 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:FIRSTNAME.FAMILYNAME@student.umons.ac.be"
+    link = "mailto:Lucie.Marin@student.umons.ac.be"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "//github.com/USERNAME"
+    link = "//github.com/LucieMarin"
 
 #  [[params.social]]
 #    icon = "twitter"
 #    icon_pack = "fa"
-#    link = "//twitter.com/USERNAME"
+#    link = "//twitter.com/LucieMarin"
 
 #  [[params.social]]
 #    icon = "stack-overflow"
