--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ defaultContentLanguageInSubdir = false
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
-  font = "default"
+  font = "classic"
 
   # Your details.
   name = "Lucie Marin"
